--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Tân binh Phạm Lý Đức: 'Tôi cần khiêm tốn khi lên tuyển Việt Nam'",
+    "content": "Phạm Lý Đức, trung vệ 22 tuổi của HAGL, vừa được triệu tập lần đầu lên đội tuyển quốc gia Việt Nam. Anh bày tỏ sự vui mừng và nhấn mạnh tầm quan trọng của việc khiêm tốn học hỏi từ các đàn anh để tích lũy kinh nghiệm. Lý Đức đã có màn trình diễn tốt tại V-League với 2 bàn thắng và 1 kiến tạo, góp phần giúp đội bóng của mình có những thành tích khả quan. Chuyên gia Đoàn Minh Xương nhận định anh là một nhân tố trẻ đầy triển vọng cho bóng đá Việt Nam trong tương lai.",
+    "link": "https://vnexpress.net/tan-binh-pham-ly-duc-toi-can-khiem-ton-khi-len-tuyen-viet-nam-4858817.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Phạm Lý Đức cảm thấy thế nào khi được gọi lên đội tuyển Việt Nam?",
+    "answers": [
+      {
+        "text": "Vui mừng và hạnh phúc",
+        "correct": true
+      },
+      {
+        "text": "Buồn và thất vọng",
+        "correct": false
+      },
+      {
+        "text": "Không quan tâm",
+        "correct": false
+      },
+      {
+        "text": "Chỉ muốn nghỉ ngơi",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Xếp hạng tỉnh thành: 28 địa phương có quy mô GRDP tương đương nơi giàu nhất nước",
     "content": "Bài viết phân tích xếp hạng quy mô GRDP của các tỉnh thành tại Việt Nam, cho thấy 28 địa phương có GRDP thấp hơn 100.000 tỉ đồng, trong khi có 8 tỉnh thành phố đạt trên 300.000 tỉ đồng. TP.HCM và Hà Nội đứng đầu với GRDP lần lượt là 1,78 triệu tỉ đồng và 1,43 triệu tỉ đồng. Sự chênh lệch về quy mô kinh tế giữa các tỉnh thành cho thấy rõ ràng, với một số địa phương có GRDP rất thấp, chỉ đạt dưới 50.000 tỉ đồng.",
     "link": "https://tuoitre.vn/xep-hang-tinh-thanh-28-dia-phuong-co-quy-mo-grdp-tuong-duong-noi-giau-nhat-nuoc-2025031012000292.htm",
@@ -618,6 +645,33 @@
     ]
   },
   {
+    "title": "Tê tay có phải dấu hiệu đột quỵ?",
+    "content": "Tê tay có thể xuất phát từ nhiều nguyên nhân khác nhau, nhưng nó cũng có thể là dấu hiệu cảnh báo đột quỵ. Việc nhận biết sớm các triệu chứng này cực kỳ quan trọng để tránh những biến chứng nguy hiểm. Bài viết nhấn mạnh tầm quan trọng của việc theo dõi các dấu hiệu để có phản ứng kịp thời.",
+    "link": "https://vnexpress.net/te-tay-co-phai-dau-hieu-dot-quy-4858950.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Tê tay có phải là dấu hiệu của đột quỵ không?",
+    "answers": [
+      {
+        "text": "Có, tê tay có thể là dấu hiệu của đột quỵ.",
+        "correct": true
+      },
+      {
+        "text": "Không, tê tay chỉ là triệu chứng bình thường.",
+        "correct": false
+      },
+      {
+        "text": "Có, nhưng nó không liên quan đến sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Không, tê tay không ảnh hưởng đến đột quỵ.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hàng chục chiếc VF 3 dạo phố trước cuộc thi của VinFast",
     "content": "Vào ngày Quốc tế phụ nữ 8/3, một nhóm hơn 40 nữ chủ xe VF 3 đã tổ chức một cuộc diễu hành qua các tuyến phố Hà Nội để quảng bá cho cuộc thi \"Sáng tạo chất riêng, Độc bản cá tính\" do VinFast tổ chức. Những chiếc xe VF 3 được cá nhân hóa với nhiều màu sắc và phong cách khác nhau đã thu hút sự chú ý của đông đảo người dân. Sự kiện này không chỉ là dịp để các chị em giao lưu mà còn lan tỏa cảm hứng sáng tạo trong cộng đồng. Cuộc thi sẽ diễn ra vào ngày 22/3 tại nhiều thành phố lớn, với tổng giá trị giải thưởng lên tới 650 triệu đồng.",
     "link": "https://vnexpress.net/hang-chuc-chiec-vf-3-dao-pho-truoc-cuoc-thi-cua-vinfast-4859032.html",
@@ -644,33 +698,6 @@
       },
       {
         "text": "1/3",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tê tay có phải dấu hiệu đột quỵ?",
-    "content": "Tê tay có thể xuất phát từ nhiều nguyên nhân khác nhau, nhưng nó cũng có thể là dấu hiệu cảnh báo đột quỵ. Việc nhận biết sớm các triệu chứng này cực kỳ quan trọng để tránh những biến chứng nguy hiểm. Bài viết nhấn mạnh tầm quan trọng của việc theo dõi các dấu hiệu để có phản ứng kịp thời.",
-    "link": "https://vnexpress.net/te-tay-co-phai-dau-hieu-dot-quy-4858950.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tê tay có phải là dấu hiệu của đột quỵ không?",
-    "answers": [
-      {
-        "text": "Có, tê tay có thể là dấu hiệu của đột quỵ.",
-        "correct": true
-      },
-      {
-        "text": "Không, tê tay chỉ là triệu chứng bình thường.",
-        "correct": false
-      },
-      {
-        "text": "Có, nhưng nó không liên quan đến sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Không, tê tay không ảnh hưởng đến đột quỵ.",
         "correct": false
       }
     ]
@@ -989,33 +1016,6 @@
     ]
   },
   {
-    "title": "Vợ chồng lục đục do bất đồng khi chữa vô sinh",
-    "content": "Bài viết nói về trường hợp của anh Khánh, 32 tuổi, bị vô sinh do tắc ống dẫn tinh nhưng không đồng ý điều trị, dẫn đến mâu thuẫn trong hôn nhân. Sau khi cãi vã và ly thân, anh Khánh quyết định quay lại bệnh viện để điều trị. Bác sĩ đã thực hiện phẫu thuật và thu tinh trùng để chuẩn bị cho thụ tinh ống nghiệm. Bác sĩ cũng khuyên nam giới nên chủ động thăm khám để phát hiện sớm các vấn đề sinh sản.",
-    "link": "https://vnexpress.net/vo-chong-luc-duc-do-bat-dong-khi-chua-vo-sinh-4858427.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao anh Khánh và vợ lại lục đục trong hôn nhân?",
-    "answers": [
-      {
-        "text": "Vì anh Khánh từ chối điều trị vô sinh",
-        "correct": true
-      },
-      {
-        "text": "Do anh Khánh không yêu vợ",
-        "correct": false
-      },
-      {
-        "text": "Vì vợ anh Khánh không muốn có con",
-        "correct": false
-      },
-      {
-        "text": "Do áp lực công việc của cả hai vợ chồng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Lợi ích sức khỏe của đậu bắp",
     "content": "Đậu bắp là một loại thực phẩm ít calo nhưng giàu dinh dưỡng, bao gồm magiê, folate, vitamin C, K1 và chất xơ. Nó hỗ trợ sức khỏe tim mạch, giúp kiểm soát lượng đường trong máu và có thể giảm nguy cơ mắc bệnh ung thư. Đặc biệt, folate trong đậu bắp rất có lợi cho phụ nữ mang thai, giảm nguy cơ khuyết tật ống thần kinh cho thai nhi. Đậu bắp cũng chứa nhiều chất chống oxy hóa giúp bảo vệ sức khỏe tổng thể.",
     "link": "https://vnexpress.net/loi-ich-suc-khoe-cua-dau-bap-4858805.html",
@@ -1038,6 +1038,33 @@
       },
       {
         "text": "Chỉ tốt cho việc giảm cân.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vợ chồng lục đục do bất đồng khi chữa vô sinh",
+    "content": "Bài viết nói về trường hợp của anh Khánh, 32 tuổi, bị vô sinh do tắc ống dẫn tinh nhưng không đồng ý điều trị, dẫn đến mâu thuẫn trong hôn nhân. Sau khi cãi vã và ly thân, anh Khánh quyết định quay lại bệnh viện để điều trị. Bác sĩ đã thực hiện phẫu thuật và thu tinh trùng để chuẩn bị cho thụ tinh ống nghiệm. Bác sĩ cũng khuyên nam giới nên chủ động thăm khám để phát hiện sớm các vấn đề sinh sản.",
+    "link": "https://vnexpress.net/vo-chong-luc-duc-do-bat-dong-khi-chua-vo-sinh-4858427.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao anh Khánh và vợ lại lục đục trong hôn nhân?",
+    "answers": [
+      {
+        "text": "Vì anh Khánh từ chối điều trị vô sinh",
+        "correct": true
+      },
+      {
+        "text": "Do anh Khánh không yêu vợ",
+        "correct": false
+      },
+      {
+        "text": "Vì vợ anh Khánh không muốn có con",
+        "correct": false
+      },
+      {
+        "text": "Do áp lực công việc của cả hai vợ chồng",
         "correct": false
       }
     ]
@@ -1511,33 +1538,6 @@
     ]
   },
   {
-    "title": "Ung thư tuyến giáp có tái phát không?",
-    "content": "Ung thư tuyến giáp có thể tái phát sau khi điều trị, với tỷ lệ tái phát khác nhau tùy thuộc vào loại ung thư và giai đoạn phát hiện. Các loại ung thư tuyến giáp thể biệt hóa có tỷ lệ tái phát thấp hơn, khoảng 1-5%, trong khi các loại không biệt hóa có tỷ lệ tái phát cao hơn, đến 28,2%. Dấu hiệu tái phát có thể không rõ ràng và người bệnh cần duy trì tái khám thường xuyên để phát hiện sớm. Việc ăn uống lành mạnh và tập thể dục cũng góp phần giảm nguy cơ tái phát bệnh.",
-    "link": "https://vnexpress.net/ung-thu-tuyen-giap-co-tai-phat-khong-4858885.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Ung thư tuyến giáp có tái phát không?",
-    "answers": [
-      {
-        "text": "Có, ung thư tuyến giáp có thể tái phát.",
-        "correct": true
-      },
-      {
-        "text": "Không, ung thư tuyến giáp không bao giờ tái phát.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tái phát ở người lớn tuổi.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tái phát nếu không điều trị đúng cách.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Thầy hiệu trưởng lập ra \"bức tường góp ý\" để lắng nghe học sinh",
     "content": "Trường Trung học Shiping tại tỉnh Vân Nam, Trung Quốc, đã thiết lập một \"bức tường góp ý\" để học sinh có thể bày tỏ ý kiến và đóng góp của mình. Thầy hiệu trưởng Zhang Min hy vọng sáng kiến này sẽ tạo ra một kênh giao tiếp hiệu quả giữa học sinh và ban giám hiệu, từ đó cải thiện môi trường giáo dục. Học sinh có thể đề xuất ý kiến trực tiếp, và thầy Zhang cam kết sẽ xem xét và giải quyết những vấn đề hợp lý mà các em nêu ra.",
     "link": "https://dantri.com.vn/giao-duc/thay-hieu-truong-lap-ra-buc-tuong-gop-y-de-lang-nghe-hoc-sinh-20250309152542216.htm",
@@ -1564,6 +1564,33 @@
       },
       {
         "text": "Một chương trình học mới",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Ung thư tuyến giáp có tái phát không?",
+    "content": "Ung thư tuyến giáp có thể tái phát sau khi điều trị, với tỷ lệ tái phát khác nhau tùy thuộc vào loại ung thư và giai đoạn phát hiện. Các loại ung thư tuyến giáp thể biệt hóa có tỷ lệ tái phát thấp hơn, khoảng 1-5%, trong khi các loại không biệt hóa có tỷ lệ tái phát cao hơn, đến 28,2%. Dấu hiệu tái phát có thể không rõ ràng và người bệnh cần duy trì tái khám thường xuyên để phát hiện sớm. Việc ăn uống lành mạnh và tập thể dục cũng góp phần giảm nguy cơ tái phát bệnh.",
+    "link": "https://vnexpress.net/ung-thu-tuyen-giap-co-tai-phat-khong-4858885.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Ung thư tuyến giáp có tái phát không?",
+    "answers": [
+      {
+        "text": "Có, ung thư tuyến giáp có thể tái phát.",
+        "correct": true
+      },
+      {
+        "text": "Không, ung thư tuyến giáp không bao giờ tái phát.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tái phát ở người lớn tuổi.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tái phát nếu không điều trị đúng cách.",
         "correct": false
       }
     ]
@@ -2029,28 +2056,28 @@
     ]
   },
   {
-    "title": "Uống sữa có làm tăng cholesterol?",
-    "content": "Bài viết thảo luận về việc uống sữa và tác động của nó đến mức cholesterol trong cơ thể. Sữa là nguồn dinh dưỡng phong phú, cung cấp nhiều vitamin và khoáng chất, nhưng những người có cholesterol cao cần lựa chọn loại sữa phù hợp để tránh làm tăng chỉ số cholesterol. Việc chọn đúng loại sữa là rất quan trọng để duy trì sức khỏe tim mạch.",
-    "link": "https://vnexpress.net/uong-sua-co-lam-tang-cholesterol-4858799.html",
+    "title": "Biến chứng tiểu đường gây mờ mắt",
+    "content": "Bài viết mô tả trường hợp của anh Hùng, 32 tuổi, bị mờ mắt do biến chứng võng mạc tiểu đường. Anh Hùng mắc bệnh tiểu đường type 2 và đã được bác sĩ chẩn đoán mắc bệnh võng mạc do lượng đường trong máu cao. Sau khi điều trị ổn định đường huyết, anh Hùng đã trải qua phẫu thuật bong võng mạc để ngăn ngừa nguy cơ mù lòa. Bài viết nhấn mạnh tầm quan trọng của việc khám mắt định kỳ cho người bệnh tiểu đường để phát hiện sớm các biến chứng.",
+    "link": "https://vnexpress.net/bien-chung-tieu-duong-gay-mo-mat-4858843.html",
     "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 6,
-    "question": "Uống sữa có làm tăng cholesterol không?",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Biến chứng tiểu đường nào gây mờ mắt?",
     "answers": [
       {
-        "text": "Có, nếu chọn loại không phù hợp.",
+        "text": "Bệnh võng mạc tiểu đường",
         "correct": true
       },
       {
-        "text": "Không, sữa không ảnh hưởng đến cholesterol.",
+        "text": "Bệnh tiểu đường type 1",
         "correct": false
       },
       {
-        "text": "Có, tất cả các loại sữa đều làm tăng cholesterol.",
+        "text": "Bệnh tăng huyết áp",
         "correct": false
       },
       {
-        "text": "Không, sữa chỉ tốt cho sức khỏe.",
+        "text": "Bệnh glôcôm",
         "correct": false
       }
     ]
@@ -2083,28 +2110,28 @@
     ]
   },
   {
-    "title": "Biến chứng tiểu đường gây mờ mắt",
-    "content": "Bài viết mô tả trường hợp của anh Hùng, 32 tuổi, bị mờ mắt do biến chứng võng mạc tiểu đường. Anh Hùng mắc bệnh tiểu đường type 2 và đã được bác sĩ chẩn đoán mắc bệnh võng mạc do lượng đường trong máu cao. Sau khi điều trị ổn định đường huyết, anh Hùng đã trải qua phẫu thuật bong võng mạc để ngăn ngừa nguy cơ mù lòa. Bài viết nhấn mạnh tầm quan trọng của việc khám mắt định kỳ cho người bệnh tiểu đường để phát hiện sớm các biến chứng.",
-    "link": "https://vnexpress.net/bien-chung-tieu-duong-gay-mo-mat-4858843.html",
+    "title": "Uống sữa có làm tăng cholesterol?",
+    "content": "Bài viết thảo luận về việc uống sữa và tác động của nó đến mức cholesterol trong cơ thể. Sữa là nguồn dinh dưỡng phong phú, cung cấp nhiều vitamin và khoáng chất, nhưng những người có cholesterol cao cần lựa chọn loại sữa phù hợp để tránh làm tăng chỉ số cholesterol. Việc chọn đúng loại sữa là rất quan trọng để duy trì sức khỏe tim mạch.",
+    "link": "https://vnexpress.net/uong-sua-co-lam-tang-cholesterol-4858799.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Biến chứng tiểu đường nào gây mờ mắt?",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Uống sữa có làm tăng cholesterol không?",
     "answers": [
       {
-        "text": "Bệnh võng mạc tiểu đường",
+        "text": "Có, nếu chọn loại không phù hợp.",
         "correct": true
       },
       {
-        "text": "Bệnh tiểu đường type 1",
+        "text": "Không, sữa không ảnh hưởng đến cholesterol.",
         "correct": false
       },
       {
-        "text": "Bệnh tăng huyết áp",
+        "text": "Có, tất cả các loại sữa đều làm tăng cholesterol.",
         "correct": false
       },
       {
-        "text": "Bệnh glôcôm",
+        "text": "Không, sữa chỉ tốt cho sức khỏe.",
         "correct": false
       }
     ]
