--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "10 điểm nhấn vòng 28 Ngoại hạng Anh",
+    "content": "Vòng 28 Ngoại hạng Anh có nhiều điểm nhấn đáng chú ý. Bruno Fernandes ghi bàn từ đá phạt, giúp Man Utd vượt qua Arsenal, trong khi Liverpool tiếp tục đua tranh với cú ăn ba sau chiến thắng trước Southampton. Man City rơi xuống thứ năm sau thất bại trước Nottingham, và Leicester tiếp tục chìm sâu dưới đáy bảng với sự dẫn dắt của Van Nistelrooy. Brighton có sự trở lại mạnh mẽ khi giành chiến thắng liên tiếp, trong khi Aston Villa chấm dứt chuỗi hòa và thua sau mỗi trận Champions League.",
+    "link": "https://vnexpress.net/10-diem-nhan-vong-28-ngoai-hang-anh-4859052.html",
+    "cat": "the-thao",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Những điểm nhấn nào nổi bật tại vòng 28 Ngoại hạng Anh?",
+    "answers": [
+      {
+        "text": "Bruno Fernandes ghi bàn từ đá phạt giúp Man Utd thắng Arsenal",
+        "correct": true
+      },
+      {
+        "text": "Man City giành chiến thắng trước Nottingham",
+        "correct": false
+      },
+      {
+        "text": "Leicester thoát khỏi khu vực xuống hạng",
+        "correct": false
+      },
+      {
+        "text": "Liverpool thua Southampton",
+        "correct": false
+      },
+      {
+        "text": "Brighton đứng thứ 10 bảng xếp hạng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tân binh Phạm Lý Đức: 'Tôi cần khiêm tốn khi lên tuyển Việt Nam'",
     "content": "Phạm Lý Đức, trung vệ 22 tuổi của HAGL, vừa được triệu tập lần đầu lên đội tuyển quốc gia Việt Nam. Anh bày tỏ sự vui mừng và nhấn mạnh tầm quan trọng của việc khiêm tốn học hỏi từ các đàn anh để tích lũy kinh nghiệm. Lý Đức đã có màn trình diễn tốt tại V-League với 2 bàn thắng và 1 kiến tạo, góp phần giúp đội bóng của mình có những thành tích khả quan. Chuyên gia Đoàn Minh Xương nhận định anh là một nhân tố trẻ đầy triển vọng cho bóng đá Việt Nam trong tương lai.",
     "link": "https://vnexpress.net/tan-binh-pham-ly-duc-toi-can-khiem-ton-khi-len-tuyen-viet-nam-4858817.html",
@@ -1016,33 +1047,6 @@
     ]
   },
   {
-    "title": "Lợi ích sức khỏe của đậu bắp",
-    "content": "Đậu bắp là một loại thực phẩm ít calo nhưng giàu dinh dưỡng, bao gồm magiê, folate, vitamin C, K1 và chất xơ. Nó hỗ trợ sức khỏe tim mạch, giúp kiểm soát lượng đường trong máu và có thể giảm nguy cơ mắc bệnh ung thư. Đặc biệt, folate trong đậu bắp rất có lợi cho phụ nữ mang thai, giảm nguy cơ khuyết tật ống thần kinh cho thai nhi. Đậu bắp cũng chứa nhiều chất chống oxy hóa giúp bảo vệ sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/loi-ich-suc-khoe-cua-dau-bap-4858805.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Đậu bắp có những lợi ích gì cho sức khỏe?",
-    "answers": [
-      {
-        "text": "Hỗ trợ sức khỏe tim mạch và kiểm soát lượng đường trong máu.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ có tác dụng làm đẹp da.",
-        "correct": false
-      },
-      {
-        "text": "Không có lợi ích sức khỏe nào.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tốt cho việc giảm cân.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Vợ chồng lục đục do bất đồng khi chữa vô sinh",
     "content": "Bài viết nói về trường hợp của anh Khánh, 32 tuổi, bị vô sinh do tắc ống dẫn tinh nhưng không đồng ý điều trị, dẫn đến mâu thuẫn trong hôn nhân. Sau khi cãi vã và ly thân, anh Khánh quyết định quay lại bệnh viện để điều trị. Bác sĩ đã thực hiện phẫu thuật và thu tinh trùng để chuẩn bị cho thụ tinh ống nghiệm. Bác sĩ cũng khuyên nam giới nên chủ động thăm khám để phát hiện sớm các vấn đề sinh sản.",
     "link": "https://vnexpress.net/vo-chong-luc-duc-do-bat-dong-khi-chua-vo-sinh-4858427.html",
@@ -1065,6 +1069,33 @@
       },
       {
         "text": "Do áp lực công việc của cả hai vợ chồng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lợi ích sức khỏe của đậu bắp",
+    "content": "Đậu bắp là một loại thực phẩm ít calo nhưng giàu dinh dưỡng, bao gồm magiê, folate, vitamin C, K1 và chất xơ. Nó hỗ trợ sức khỏe tim mạch, giúp kiểm soát lượng đường trong máu và có thể giảm nguy cơ mắc bệnh ung thư. Đặc biệt, folate trong đậu bắp rất có lợi cho phụ nữ mang thai, giảm nguy cơ khuyết tật ống thần kinh cho thai nhi. Đậu bắp cũng chứa nhiều chất chống oxy hóa giúp bảo vệ sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/loi-ich-suc-khoe-cua-dau-bap-4858805.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Đậu bắp có những lợi ích gì cho sức khỏe?",
+    "answers": [
+      {
+        "text": "Hỗ trợ sức khỏe tim mạch và kiểm soát lượng đường trong máu.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ có tác dụng làm đẹp da.",
+        "correct": false
+      },
+      {
+        "text": "Không có lợi ích sức khỏe nào.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tốt cho việc giảm cân.",
         "correct": false
       }
     ]
@@ -1538,6 +1569,33 @@
     ]
   },
   {
+    "title": "Ung thư tuyến giáp có tái phát không?",
+    "content": "Ung thư tuyến giáp có thể tái phát sau khi điều trị, với tỷ lệ tái phát khác nhau tùy thuộc vào loại ung thư và giai đoạn phát hiện. Các loại ung thư tuyến giáp thể biệt hóa có tỷ lệ tái phát thấp hơn, khoảng 1-5%, trong khi các loại không biệt hóa có tỷ lệ tái phát cao hơn, đến 28,2%. Dấu hiệu tái phát có thể không rõ ràng và người bệnh cần duy trì tái khám thường xuyên để phát hiện sớm. Việc ăn uống lành mạnh và tập thể dục cũng góp phần giảm nguy cơ tái phát bệnh.",
+    "link": "https://vnexpress.net/ung-thu-tuyen-giap-co-tai-phat-khong-4858885.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Ung thư tuyến giáp có tái phát không?",
+    "answers": [
+      {
+        "text": "Có, ung thư tuyến giáp có thể tái phát.",
+        "correct": true
+      },
+      {
+        "text": "Không, ung thư tuyến giáp không bao giờ tái phát.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tái phát ở người lớn tuổi.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tái phát nếu không điều trị đúng cách.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thầy hiệu trưởng lập ra \"bức tường góp ý\" để lắng nghe học sinh",
     "content": "Trường Trung học Shiping tại tỉnh Vân Nam, Trung Quốc, đã thiết lập một \"bức tường góp ý\" để học sinh có thể bày tỏ ý kiến và đóng góp của mình. Thầy hiệu trưởng Zhang Min hy vọng sáng kiến này sẽ tạo ra một kênh giao tiếp hiệu quả giữa học sinh và ban giám hiệu, từ đó cải thiện môi trường giáo dục. Học sinh có thể đề xuất ý kiến trực tiếp, và thầy Zhang cam kết sẽ xem xét và giải quyết những vấn đề hợp lý mà các em nêu ra.",
     "link": "https://dantri.com.vn/giao-duc/thay-hieu-truong-lap-ra-buc-tuong-gop-y-de-lang-nghe-hoc-sinh-20250309152542216.htm",
@@ -1564,33 +1622,6 @@
       },
       {
         "text": "Một chương trình học mới",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ung thư tuyến giáp có tái phát không?",
-    "content": "Ung thư tuyến giáp có thể tái phát sau khi điều trị, với tỷ lệ tái phát khác nhau tùy thuộc vào loại ung thư và giai đoạn phát hiện. Các loại ung thư tuyến giáp thể biệt hóa có tỷ lệ tái phát thấp hơn, khoảng 1-5%, trong khi các loại không biệt hóa có tỷ lệ tái phát cao hơn, đến 28,2%. Dấu hiệu tái phát có thể không rõ ràng và người bệnh cần duy trì tái khám thường xuyên để phát hiện sớm. Việc ăn uống lành mạnh và tập thể dục cũng góp phần giảm nguy cơ tái phát bệnh.",
-    "link": "https://vnexpress.net/ung-thu-tuyen-giap-co-tai-phat-khong-4858885.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Ung thư tuyến giáp có tái phát không?",
-    "answers": [
-      {
-        "text": "Có, ung thư tuyến giáp có thể tái phát.",
-        "correct": true
-      },
-      {
-        "text": "Không, ung thư tuyến giáp không bao giờ tái phát.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tái phát ở người lớn tuổi.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tái phát nếu không điều trị đúng cách.",
         "correct": false
       }
     ]
@@ -2056,33 +2087,6 @@
     ]
   },
   {
-    "title": "Biến chứng tiểu đường gây mờ mắt",
-    "content": "Bài viết mô tả trường hợp của anh Hùng, 32 tuổi, bị mờ mắt do biến chứng võng mạc tiểu đường. Anh Hùng mắc bệnh tiểu đường type 2 và đã được bác sĩ chẩn đoán mắc bệnh võng mạc do lượng đường trong máu cao. Sau khi điều trị ổn định đường huyết, anh Hùng đã trải qua phẫu thuật bong võng mạc để ngăn ngừa nguy cơ mù lòa. Bài viết nhấn mạnh tầm quan trọng của việc khám mắt định kỳ cho người bệnh tiểu đường để phát hiện sớm các biến chứng.",
-    "link": "https://vnexpress.net/bien-chung-tieu-duong-gay-mo-mat-4858843.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Biến chứng tiểu đường nào gây mờ mắt?",
-    "answers": [
-      {
-        "text": "Bệnh võng mạc tiểu đường",
-        "correct": true
-      },
-      {
-        "text": "Bệnh tiểu đường type 1",
-        "correct": false
-      },
-      {
-        "text": "Bệnh tăng huyết áp",
-        "correct": false
-      },
-      {
-        "text": "Bệnh glôcôm",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Xây ngân sách kép - cách đầu tư hiệu quả của giám đốc Dragon Capital",
     "content": "Bài viết chia sẻ kinh nghiệm đầu tư và quản lý tài chính của bà Lương Thị Mỹ Hạnh, Giám đốc Quản lý tài sản tại Dragon Capital. Bà Hạnh nhấn mạnh tầm quan trọng của việc hiểu rõ dòng tiền và xây dựng ngân sách cho hiện tại và tương lai. Bà khuyến khích người trẻ bắt đầu đầu tư với số vốn nhỏ và giữ kỷ luật trong việc tích lũy và đầu tư để đạt được tự do tài chính. Bà cũng khuyến nghị phân bổ tài sản theo từng giai đoạn tuổi tác và mục tiêu tài chính cá nhân.",
     "link": "https://vnexpress.net/xay-ngan-sach-kep-cach-dau-tu-hieu-qua-cua-giam-doc-dragon-capital-4856770.html",
@@ -2132,6 +2136,33 @@
       },
       {
         "text": "Không, sữa chỉ tốt cho sức khỏe.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Biến chứng tiểu đường gây mờ mắt",
+    "content": "Bài viết mô tả trường hợp của anh Hùng, 32 tuổi, bị mờ mắt do biến chứng võng mạc tiểu đường. Anh Hùng mắc bệnh tiểu đường type 2 và đã được bác sĩ chẩn đoán mắc bệnh võng mạc do lượng đường trong máu cao. Sau khi điều trị ổn định đường huyết, anh Hùng đã trải qua phẫu thuật bong võng mạc để ngăn ngừa nguy cơ mù lòa. Bài viết nhấn mạnh tầm quan trọng của việc khám mắt định kỳ cho người bệnh tiểu đường để phát hiện sớm các biến chứng.",
+    "link": "https://vnexpress.net/bien-chung-tieu-duong-gay-mo-mat-4858843.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Biến chứng tiểu đường nào gây mờ mắt?",
+    "answers": [
+      {
+        "text": "Bệnh võng mạc tiểu đường",
+        "correct": true
+      },
+      {
+        "text": "Bệnh tiểu đường type 1",
+        "correct": false
+      },
+      {
+        "text": "Bệnh tăng huyết áp",
+        "correct": false
+      },
+      {
+        "text": "Bệnh glôcôm",
         "correct": false
       }
     ]
@@ -2357,37 +2388,6 @@
     ]
   },
   {
-    "title": "3 tháng sống như \"người điên\" và hành trình giành học bổng Mỹ",
-    "content": "Hà Thảo Trang, sinh viên năm 3 Học viện Ngoại giao, đã giành được học bổng Global Undergraduate Exchange Program trị giá 30.000 USD để du học Mỹ. Cô đã dành ba tháng cuối năm 2023 để chuẩn bị hồ sơ và bài luận, trong một khoảng thời gian mà cô tự mô tả là sống như \"người điên\" vì quyết tâm theo đuổi giấc mơ du học. Thảo Trang không chỉ xuất sắc trong học tập mà còn tích cực tham gia nhiều hoạt động ngoại khóa, giúp cô có thêm kinh nghiệm và tự tin hơn trong việc giao tiếp bằng tiếng Anh.",
-    "link": "https://dantri.com.vn/giao-duc/3-thang-song-nhu-nguoi-dien-va-hanh-trinh-gianh-hoc-bong-my-20250309092058514.htm",
-    "cat": "giao-duc",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Hà Thảo Trang đã làm gì để giành học bổng du học Mỹ?",
-    "answers": [
-      {
-        "text": "Cô đã dành ba tháng để viết hồ sơ và bài luận.",
-        "correct": true
-      },
-      {
-        "text": "Cô đã tham gia nhiều hoạt động ngoại khóa.",
-        "correct": false
-      },
-      {
-        "text": "Cô đã học tiếng Anh từ nhỏ.",
-        "correct": false
-      },
-      {
-        "text": "Cô đã thi nhiều cuộc thi tranh biện.",
-        "correct": false
-      },
-      {
-        "text": "Cô đã nộp hồ sơ vào nhiều trường khác.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Lexus LX 700h bản giới hạn 10 xe ra mắt",
     "content": "Lexus vừa ra mắt phiên bản giới hạn LX 700h Hideki Edition kỷ niệm 10 năm chiến thắng của tay golf Hideki Matsuyama. Phiên bản này chỉ sản xuất 10 chiếc, được sơn màu Manganese Luster và trang bị những tính năng cao cấp như hệ thống âm thanh Mark Levinson. Giá bán của phiên bản đặc biệt này tại Nhật Bản là 114.900 USD, cao hơn 7.400 USD so với phiên bản tiêu chuẩn.",
     "link": "https://vnexpress.net/lexus-lx-700h-ban-gioi-han-10-xe-ra-mat-4858775.html",
@@ -2414,6 +2414,37 @@
       },
       {
         "text": "12 xe",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "3 tháng sống như \"người điên\" và hành trình giành học bổng Mỹ",
+    "content": "Hà Thảo Trang, sinh viên năm 3 Học viện Ngoại giao, đã giành được học bổng Global Undergraduate Exchange Program trị giá 30.000 USD để du học Mỹ. Cô đã dành ba tháng cuối năm 2023 để chuẩn bị hồ sơ và bài luận, trong một khoảng thời gian mà cô tự mô tả là sống như \"người điên\" vì quyết tâm theo đuổi giấc mơ du học. Thảo Trang không chỉ xuất sắc trong học tập mà còn tích cực tham gia nhiều hoạt động ngoại khóa, giúp cô có thêm kinh nghiệm và tự tin hơn trong việc giao tiếp bằng tiếng Anh.",
+    "link": "https://dantri.com.vn/giao-duc/3-thang-song-nhu-nguoi-dien-va-hanh-trinh-gianh-hoc-bong-my-20250309092058514.htm",
+    "cat": "giao-duc",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Hà Thảo Trang đã làm gì để giành học bổng du học Mỹ?",
+    "answers": [
+      {
+        "text": "Cô đã dành ba tháng để viết hồ sơ và bài luận.",
+        "correct": true
+      },
+      {
+        "text": "Cô đã tham gia nhiều hoạt động ngoại khóa.",
+        "correct": false
+      },
+      {
+        "text": "Cô đã học tiếng Anh từ nhỏ.",
+        "correct": false
+      },
+      {
+        "text": "Cô đã thi nhiều cuộc thi tranh biện.",
+        "correct": false
+      },
+      {
+        "text": "Cô đã nộp hồ sơ vào nhiều trường khác.",
         "correct": false
       }
     ]
@@ -3199,6 +3230,33 @@
     ]
   },
   {
+    "title": "Bé gái nguy kịch do biến chứng sởi",
+    "content": "Một bé gái một tuổi ở Phú Thọ đã nhập viện trong tình trạng nguy kịch do biến chứng sởi, với triệu chứng sốt cao liên tục, co giật, và phát ban toàn thân. Sau 6 ngày điều trị tích cực, tình trạng của bé đã ổn định, hết sốt và có thể ăn uống trở lại. Bệnh sởi là một bệnh truyền nhiễm nguy hiểm, có thể gây ra nhiều biến chứng nghiêm trọng, vì vậy việc tiêm vaccine và giữ vệ sinh là rất cần thiết để phòng ngừa bệnh.",
+    "link": "https://vnexpress.net/be-gai-nguy-kich-do-bien-chung-soi-4858787.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Bé gái nguy kịch do biến chứng nào?",
+    "answers": [
+      {
+        "text": "Sởi",
+        "correct": true
+      },
+      {
+        "text": "Cúm",
+        "correct": false
+      },
+      {
+        "text": "Thủy đậu",
+        "correct": false
+      },
+      {
+        "text": "Viêm phổi",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hàng nghìn ôtô điện VinFast sắp đến Indonesia",
     "content": "VinFast đã xuất khẩu gần 2.500 chiếc ôtô điện đến Indonesia, bao gồm các mẫu VF 3, VF 5, VF e34 và Nerio Green, trên tàu Silver Queen. Lô hàng này sẽ được bàn giao cho người tiêu dùng trước lễ Lebaran của người Hồi giáo. VinFast đánh giá Indonesia là thị trường trọng điểm với tốc độ tăng trưởng cao và đã có kế hoạch mở rộng sản xuất, nhằm cung cấp các dịch vụ và sản phẩm tốt nhất cho khách hàng tại đây.",
     "link": "https://vnexpress.net/hang-nghin-oto-dien-vinfast-sap-den-indonesia-4858752.html",
@@ -3225,33 +3283,6 @@
       },
       {
         "text": "Singapore",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bé gái nguy kịch do biến chứng sởi",
-    "content": "Một bé gái một tuổi ở Phú Thọ đã nhập viện trong tình trạng nguy kịch do biến chứng sởi, với triệu chứng sốt cao liên tục, co giật, và phát ban toàn thân. Sau 6 ngày điều trị tích cực, tình trạng của bé đã ổn định, hết sốt và có thể ăn uống trở lại. Bệnh sởi là một bệnh truyền nhiễm nguy hiểm, có thể gây ra nhiều biến chứng nghiêm trọng, vì vậy việc tiêm vaccine và giữ vệ sinh là rất cần thiết để phòng ngừa bệnh.",
-    "link": "https://vnexpress.net/be-gai-nguy-kich-do-bien-chung-soi-4858787.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Bé gái nguy kịch do biến chứng nào?",
-    "answers": [
-      {
-        "text": "Sởi",
-        "correct": true
-      },
-      {
-        "text": "Cúm",
-        "correct": false
-      },
-      {
-        "text": "Thủy đậu",
-        "correct": false
-      },
-      {
-        "text": "Viêm phổi",
         "correct": false
       }
     ]
@@ -4141,33 +4172,6 @@
       },
       {
         "text": "Nhóm bảo vệ dân phố",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "'Tay chơi mới' trên thị trường bất động sản",
-    "content": "Bài viết bàn về các chính sách mới nhằm cải thiện tình hình thị trường bất động sản tại Việt Nam, đặc biệt là trong lĩnh vực nhà ở xã hội. Chính phủ đã đưa ra chỉ tiêu xây dựng 1 triệu căn nhà ở xã hội, kèm theo việc lập quỹ nhà ở quốc gia để tăng cường nguồn cung và hỗ trợ người dân có thu nhập thấp. Nhu cầu nhà ở tăng cao trong khi nguồn cung hạn chế đã dẫn đến sự chênh lệch giá cả lớn giữa nhà ở xã hội và nhà ở thương mại, điều này nhấn mạnh sự cần thiết phải có những giải pháp hợp lý hơn trong quản lý thị trường.",
-    "link": "https://tuoitre.vn/tay-choi-moi-tren-thi-truong-bat-dong-san-20250309082511783.htm",
-    "cat": "kinh-doanh",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Những chính sách nào được đề ra để cải thiện tình hình nhà ở xã hội?",
-    "answers": [
-      {
-        "text": "Chỉ tiêu xây dựng 1 triệu căn nhà ở xã hội và lập quỹ nhà ở quốc gia",
-        "correct": true
-      },
-      {
-        "text": "Giảm giá thuê nhà ở thương mại",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường vay ngân hàng cho người mua nhà",
-        "correct": false
-      },
-      {
-        "text": "Cung cấp miễn phí nhà ở cho người thu nhập thấp",
         "correct": false
       }
     ]
